Add extra parameters test (e.g. python version)